# libnest2dpy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.py  pyproject.toml  setup.py
.github/workflows/: branch.yaml
include/: bind_degrees.hpp  bind_double.hpp  bind_geometries.hpp  bind_radians.hpp  common.hpp  libnest2dpy.hpp
libnest2dpy/: __init__.py  __init__.pyi  _libnest2dpy.pyi
src/: bind_degrees.cpp  bind_double.cpp  bind_geometries.cpp  bind_radians.cpp  libnest2dpy.cpp
tests/: dummy_test.py  test_degrees.py  test_double.py  test_geometries.py  test_radians.py
